# number-theory

./: .clang-format  .ivl  CMakeLists.txt  README.md
perftest/: test.cpp
src/ivl/: bignum.hpp  divisors.hpp  factorize.hpp  lazy.hpp  multi-fns.hpp  pollard-rho.hpp  safe.hpp  tester.hpp
src/ivl/bignum_details/: signed_wrapper.hpp  unsigned_bignum.hpp
test/: test.cpp
